--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^5.1.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.10",
     "prompt-sync": "^4.2.0"
   }
